# mail-telegram

./: .gitignore  README.md  package.json  script.js
.github/workflows/: sender.yml
gmail-credentials/: README.md  generate-credentials.ts  package.json  tsconfig.json
mail-telegram-core/: README.md  package.json  set-bot-commands.ts  tsconfig.json
mail-telegram-core/convex/: crons.ts  gmails.ts  http.ts  schema.ts  telegram.ts
mail-telegram-core/convex/gmail/: actions.ts  mutations.ts  queries.ts
mail_telegram_core/: Cargo.toml
mail_telegram_core/src/: db.rs  env.rs  gmail.rs  main.rs  pdf.rs  telegram.rs
mail_telegram_core/src/entities/: mails.rs  mod.rs  prelude.rs
mail_telegram_core/src/migrator/: m20220101_000001_create_mails_table.rs  mod.rs
