[package]
name = "mail_telegram_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
google-gmail1 = "5.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"