[package]
name = "mail_telegram_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
google-gmail1 = "5.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
headless_chrome = "1.0.15"
base64 = "0.22.1"
warp = "0.3.7"
rand = "0.8.5"
teloxide = { version = "0.13.0", features = ["macros"] }
sea-orm = { version = "1.1.1", features = ["runtime-async-std-native-tls", "sqlx-postgres", "macros"] }
sea-orm-migration = "1.1.1"
futures = "0.3.31"
dotenvy = "0.15.7"
